Fix header guard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_C_FLAGS "-g -Wall -std=c89")
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall -std=c89")
 set(CMAKE_C_FLAGS_RELEASE "-Wall -std=c89")
 
+set(CMAKE_C_COMPILER cc)
+
 include_directories(${PROJECT_SOURCE_DIR} testcase)
 
 file(GLOB_RECURSE LIB_FILES 
